fixed img cropper bug, added sizes for photos, added caption

--- a/src/app/appeal/photo-crop/photo-crop.component.css
+++ b/src/app/appeal/photo-crop/photo-crop.component.css
@@ -3,5 +3,5 @@
   margin:16px auto 16px auto;
 }
 .modal-dialog.modal-lg {
-  max-width:90%;
+  width:90%;
 }
